--- a/src/app/exercise-list/exercise-list.component.html
+++ b/src/app/exercise-list/exercise-list.component.html
@@ -1,1 +1,10 @@
-<p>exercise-list works!</p>
+<mat-list>
+  <div mat-subheader>Exercises</div>
+  @for (folder of ['test']; track folder) {
+    <mat-list-item>
+      <mat-icon matListItemIcon>folder</mat-icon>
+      <div matListItemTitle>{{folder}}</div>
+      <div matListItemLine>{{folder}}</div>
+    </mat-list-item>
+  }
+</mat-list>
