feat: Add training components

--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,13 +1,32 @@
-<mat-list>
-  <div mat-subheader>Training {{training.name}}</div>
+@if (loading()) {
+  Loading...
+}
+<mat-list *ngIf="training();let training;">
+  <div mat-subheader>Training: {{training.name}}</div>
+  @if (training.startDate != null) {
+    <span>Training started at: {{ training.startDate | date: 'hh:mm:ss' }}</span>
+    <span>Training running: {{ trainingRunningTime() }}</span>
+  }
   @for (exercise of training.exercises; track exercise) {
-    <mat-list-item>
+    <mat-list-item (click)="startExercise(exercise)">
       <mat-icon matListItemIcon>folder</mat-icon>
       <div matListItemTitle>{{exercise.name}}</div>
-      <!--      <div matListItemLine>{{folder}}</div> -->
+
+      @if (exercise.series.length > 0) {
+        <div matListItemLine>Done</div>
+      }
     </mat-list-item>
   }
 </mat-list>
+@if (training()?.startDate == null || training()?.endDate != null) {
+  <button (click)="start()" mat-fab [color]="'green'">
+    <mat-icon>play_arrow</mat-icon>
+  </button>
+} @else {
+  <button (click)="stop()" mat-fab [color]="'red'">
+    <mat-icon>square</mat-icon>
+  </button>
+}
 <button (click)="addExercise()" mat-fab>
   <mat-icon>add</mat-icon>
 </button>
