--- a/src/app/training-plans/training-plans.component.html
+++ b/src/app/training-plans/training-plans.component.html
@@ -1,4 +1,6 @@
 <mat-list>
+  <button>Free training</button>
+
   <div mat-subheader>Training Plans</div>
   @for (plan of trainingPlans(); track plan) {
     <mat-list-item (click)="startTrainingPlan(plan)">
@@ -6,13 +8,15 @@
       <div matListItemTitle>{{plan.name}}</div>
 <!--      <div matListItemLine>{{folder}}</div> -->
       <div matListItemMeta>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="editTrainingPlan(plan)">
           <mat-icon>edit</mat-icon>
         </button>
       </div>
     </mat-list-item>
   }
 </mat-list>
-<button (click)="newTraining()" mat-fab>
-  <mat-icon>add</mat-icon>
-</button>
+<div class="fab-container">
+  <button (click)="newTraining()" mat-fab>
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
