--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -5,14 +5,14 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['']">Link 1</a>
-      <a mat-list-item [routerLink]="['/exercise-list']">Exercise List</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item [routerLink]="['']" i18n>Training Plans</a>
+      <a mat-list-item [routerLink]="['/exercise-list']" i18n>Exercise List</a>
+      <a mat-list-item [routerLink]="['/training/history']" i18n>History</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      @if (isHandset$ | async) {
+      @if ((isHandset$ | async)) {
         <button
           type="button"
           aria-label="Toggle sidenav"
