--- a/src/app/exercise-detail/exercise-detail.component.html
+++ b/src/app/exercise-detail/exercise-detail.component.html
@@ -1,5 +1,5 @@
-<h2>Cvik</h2>
-<table mat-table [dataSource]="exercise.series" class="mat-elevation-z8">
+<h2>Cvik {{exercise?.name}}</h2>
+<table mat-table [dataSource]="exercise.series" class="mat-elevation-z8" *ngIf="exercise != null">
   <!-- series Column -->
   <ng-container matColumnDef="series">
     <th mat-header-cell *matHeaderCellDef> Série </th>
