--- a/src/app/training-plan-edit/training-plan-edit.component.html
+++ b/src/app/training-plan-edit/training-plan-edit.component.html
@@ -3,7 +3,7 @@
 }
 <mat-list *ngIf="trainingPlan();let trainingPlan;">
   <div mat-subheader>Training Plan: {{trainingPlan.name}}</div>
-  @for (exercise of trainingPlan.exercises; track exercise) {
+  @for (exercise of trainingPlan.exercises; track $index) {
     <mat-list-item>
       <mat-icon matListItemIcon>folder</mat-icon>
       <div matListItemTitle>{{exercise.name}}</div>
