--- a/src/app/exercise-history/exercise-history.component.html
+++ b/src/app/exercise-history/exercise-history.component.html
@@ -1,26 +1,21 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2" rowHeight="350px">
-    @for (card of cards | async; track card) {
-      <mat-grid-tile [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card">
-          <mat-card-header>
-            <mat-card-title>
-              {{card.title}}
-              <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #menu="matMenu" xPosition="before">
-                <button mat-menu-item>Expand</button>
-                <button mat-menu-item>Remove</button>
-              </mat-menu>
-            </mat-card-title>
-          </mat-card-header>
-          <mat-card-content class="dashboard-card-content">
-            <div>Card Content Here</div>
-          </mat-card-content>
-        </mat-card>
-      </mat-grid-tile>
+  <h1 class="mat-h1">Exercise {{exercise()?.name}} History</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Date</th>
+        @for (serie of [1, 2, 3, 4, 5, 6]; track $index) {
+          <th>{{ serie }}</th>
+        }
+      </tr>
+    </thead>
+    @for (execution of executions(); track $index) {
+      <tr>
+        <td></td>
+        @for (serie of execution.series; track $index) {
+          <td>{{ serie.weight }}kg - {{ serie.repetitions}}x</td>
+        }
+      </tr>
     }
-  </mat-grid-list>
+  </table>
 </div>
