--- a/src/app/training-history/training-history.component.html
+++ b/src/app/training-history/training-history.component.html
@@ -1,7 +1,7 @@
 <mat-list>
   <div mat-subheader>Training History</div>
   @for (training of trainings(); track training.id) {
-    <mat-list-item>
+    <mat-list-item (dblclick)="openTrainingDetail(training)">
       <mat-icon matListItemIcon>folder</mat-icon>
       <div matListItemTitle>{{training.name}}</div>
       <div matListItemLine>Duration: {{ training | trainingDuration }}</div>
