feat: Add version info

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -11,3 +11,7 @@
     <button (click)="syncFromDb()">Sync from DB</button>
   }
 </div>
+<div>
+  <div>Version: {{ version.version }} {{ version.commitHash }}</div>
+  <div>Date: {{ version.date }}</div>
+</div>
