--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,17 +1,50 @@
-<div>
-  <button (click)="export()">Export</button>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Synchronization</mat-card-title>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button (click)="export()">Export</button>
+    <input #file style="display: none" type="file" (change)="onChange($event)">
+    <button mat-button (click)="file.click()">Import</button>
+    <button color="error" mat-button (click)="clear()">Clear</button>
+  </mat-card-actions>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>User</mat-card-title>
+  </mat-card-header>
+  <mat-card-actions>
+    @if ((user$ | async); as user) {
+      {{ user.email }}
+      <button (click)="logout()" mat-button>Log out</button>
+    } @else {
+      <button (click)="login()" mat-button>Log in</button>
+    }
+  </mat-card-actions>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>DB Sync</mat-card-title>
+  </mat-card-header>
+  <mat-card-actions>
+    @if ((user$ | async) != null) {
+      <button mat-button (click)="syncToDb()">Sync to DB</button>
+      <button mat-button (click)="syncFromDb()">Sync from DB</button>
+    } @else {
+      <button mat-button>Sync to DB</button>
+      <button mat-button>Sync from DB</button>
+    }
+  </mat-card-actions>
+</mat-card>
 
-  <input type="file" (change)="onChange($event)">
-  <button (click)="import()">Import</button>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>DB Synch</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div>Version: {{ version.version }}</div>
+    <div>Commit: {{ version.commitHash }}</div>
+    <div>Date: {{ version.date }}</div>
+  </mat-card-content>
+</mat-card>
 
-  <button (click)="clear()">Clear</button>
-
-  @if ((user$ | async) != null) {
-    <button (click)="syncToDb()">Sync to DB</button>
-    <button (click)="syncFromDb()">Sync from DB</button>
-  }
-</div>
-<div>
-  <div>Version: {{ version.version }} {{ version.commitHash }}</div>
-  <div>Date: {{ version.date }}</div>
-</div>
