fix: Fix series index in current exercise

--- a/src/app/exercise-detail/exercise-detail.component.html
+++ b/src/app/exercise-detail/exercise-detail.component.html
@@ -6,7 +6,7 @@
   <!-- series Column -->
   <ng-container matColumnDef="series">
     <th mat-header-cell *matHeaderCellDef> Série </th>
-    <td mat-cell *matCellDef="let element"> {{element.series}} </td>
+    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
   </ng-container>
 
   <!-- weight Column -->
