--- a/src/app/exercise-execution-detail/exercise-execution-detail.component.html
+++ b/src/app/exercise-execution-detail/exercise-execution-detail.component.html
@@ -19,11 +19,21 @@
     <td mat-cell *matCellDef="let element"> {{element.repetitions}} </td>
   </ng-container>
 
+  <!-- actions Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button (click)="deleteSeries(element)" color="warn" mat-icon-button aria-label="Delete series">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 }
-<form class="example-form">
+<form class="exercise-execution-detail-form">
   <div class="form-body">
     <mat-form-field>
       <mat-label>Váha</mat-label>
