--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -1,11 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['/training']" i18n *ngIf="currentTraining() != null">Active Training</a>
+      @if (currentTraining() != null) {
+        <a mat-list-item [routerLink]="['/training']" i18n>Active Training</a>
+      }
       <a mat-list-item [routerLink]="['']" i18n>Training Plans</a>
       <a mat-list-item [routerLink]="['/exercise-list']" i18n>Exercise List</a>
       <a mat-list-item [routerLink]="['/training/history']" i18n>History</a>
