--- a/src/app/exercise-detail/exercise-detail.component.html
+++ b/src/app/exercise-detail/exercise-detail.component.html
@@ -2,38 +2,36 @@
 @if (lastExecution != null) {
   Last time: {{ lastExecution.date | date }}
 }
-<table mat-table [dataSource]="exercise.series" class="mat-elevation-z8" *ngIf="exercise != null">
-  <!-- series Column -->
-  <ng-container matColumnDef="series">
-    <th mat-header-cell *matHeaderCellDef> Série </th>
-    <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
-  </ng-container>
-
-  <!-- weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Váha </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-  </ng-container>
-
-  <!-- repetitions Column -->
-  <ng-container matColumnDef="repetitions">
-    <th mat-header-cell *matHeaderCellDef> Opakování </th>
-    <td mat-cell *matCellDef="let element"> {{element.repetitions}} </td>
-  </ng-container>
-
-  <!-- actions Column -->
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button (click)="deleteSeries(element)" color="warn" mat-icon-button aria-label="Delete series">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+@if (exercise != null) {
+  <table mat-table [dataSource]="exercise.series" class="mat-elevation-z8">
+    <!-- series Column -->
+    <ng-container matColumnDef="series">
+      <th mat-header-cell *matHeaderCellDef> Série </th>
+      <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+    </ng-container>
+    <!-- weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Váha </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+    <!-- repetitions Column -->
+    <ng-container matColumnDef="repetitions">
+      <th mat-header-cell *matHeaderCellDef> Opakování </th>
+      <td mat-cell *matCellDef="let element"> {{element.repetitions}} </td>
+    </ng-container>
+    <!-- actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button (click)="deleteSeries(element)" color="warn" mat-icon-button aria-label="Delete series">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+}
 <form class="exercise-detail-form">
   <div class="form-body">
     <mat-form-field>
