--- a/src/app/training-current/training-current.component.html
+++ b/src/app/training-current/training-current.component.html
@@ -1,20 +1,21 @@
-<mat-list *ngIf="training();let training;">
-  <div mat-subheader>Training: {{training.name}}</div>
-  @if (training.startDate != null) {
-    <span>Training started at: {{ training.startDate | date: 'hh:mm:ss' }}</span>
-    <span>Training running: {{ trainingRunningTime() | duration }}</span>
-  }
-  @for (exercise of training.exercises; track $index) {
-    <mat-list-item (click)="startExercise(exercise)">
-      <mat-icon matListItemIcon>folder</mat-icon>
-      <div matListItemTitle>{{exercise.name}}</div>
-
-      @if (exercise.series.length > 0) {
-        <div matListItemLine>Done</div>
-      }
-    </mat-list-item>
-  }
-</mat-list>
+@if (training(); as training;) {
+  <mat-list>
+    <div mat-subheader>Training: {{training.name}}</div>
+    @if (training.startDate != null) {
+      <span>Training started at: {{ training.startDate | date: 'hh:mm:ss' }}</span>
+      <span>Training running: {{ trainingRunningTime() | duration }}</span>
+    }
+    @for (exercise of training.exercises; track $index) {
+      <mat-list-item (click)="startExercise(exercise)">
+        <mat-icon matListItemIcon>folder</mat-icon>
+        <div matListItemTitle>{{exercise.name}}</div>
+        @if (exercise.series.length > 0) {
+          <div matListItemLine>Done</div>
+        }
+      </mat-list-item>
+    }
+  </mat-list>
+}
 @if (training()?.startDate == null || training()?.endDate != null) {
   <button (click)="start()" mat-fab [color]="'green'">
     <mat-icon>play_arrow</mat-icon>
