feat: Update hover styles

--- a/src/app/exercise-list/exercise-list.component.scss
+++ b/src/app/exercise-list/exercise-list.component.scss
@@ -28,6 +28,16 @@
 
 .exercise-item {
   cursor: pointer;
+  
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.08);
+    }
+  }
 }
 
 .fab-container {
